# site

./: Cargo.toml  Dockerfile  Procfile  app.json  tailwind.config.js
.github/workflows/: ci.yml
src/: main.rs
static/css/: base.css
templates/base/: layout.html.tera
templates/home/: index.html.tera
